rbe/envoy.yaml
static_resources:
  listeners:
    - name: rbe
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8980
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: rbe
                codec_type: AUTO
                stream_idle_timeout: 0s
                route_config:
                  name: rbe
                  virtual_hosts:
                    - name: buildbarn
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/buildbarn.remoteworker.OperationQueue/"
                          route:
                            cluster: scheduler_workers
                            timeout: 0s
                        - match:
                            prefix: "/"
                          route:
                            cluster: frontend
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: scheduler_workers
      type: STRICT_DNS
      connect_timeout: 5s
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: scheduler_workers
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: scheduler
                      port_value: 8983
    - name: frontend
      type: STRICT_DNS
      connect_timeout: 5s
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: frontend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: frontend
                      port_value: 8985
